fix up calendar alignment

--- a/src/typescript/components/date-picker/date-picker.pcss
+++ b/src/typescript/components/date-picker/date-picker.pcss
@@ -111,7 +111,8 @@
         .current-date {
             font-size: 16px;
             text-align: center;
-            font-weight: bold;
+            font-family: var(--label-font);
+            font-weight: 600;
         }
     }
 
