--- a/src/typescript/components/date-picker/month.pcss
+++ b/src/typescript/components/date-picker/month.pcss
@@ -33,15 +33,18 @@
 
         > li {
             cursor: pointer;
+            padding: 3px;
+
+            > div {
+                width: 30px;
+                line-height: 28px;
+                text-align: center;
+            }
 
             &.today:not(.selected) > div {
                 border: 1px solid #b9b9b9;
                 border-radius: 50%;
-                width: 30px;
-                height: 30px;
-                text-align: center;
                 background-color: whitesmoke;
-                line-height: 26px;
             }
 
             &.selected {
